# CopyShare

./: .codex-release.json  .gitignore  LICENSE  README.md  components.json  findings.md  index.html  lan_clipboard_sync_ui.py  package-lock.json  package.json  progress.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.playwright-cli/: page-2026-06-20T18-17-23-738Z.yml
lan_clipboard_sync/: __init__.py  __main__.py  app.py  clipboard.py  messages.py  sync_engine.py  websocket.py
lan_clipboard_sync/ui/: __init__.py  __main__.py  controller.py  state.py  tk_app.py
previews/: clipboard-tab-transition-options.html  mobile-phone-clipboard-list-preview.html  mobile-qr-info-relocation-preview.html  mobile-qr-layouts.html  mobile-qr-left-content-effect.html  preview-server.cjs  recent-sync-status-preview.html  settings-image2-design.html  sidebar-beauty-options.html  sidebar-expand-collapse-options.html  startup-animation-preview.html  startup-loading-options.html
scripts/: package_windows.ps1  simple_visual_server.ps1  start_visual_companion.ps1  static_ui_server.py
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  commands.rs  config.rs  device_store.rs  discovery.rs  error.rs  file_transfer.rs  file_transfer_http.rs  file_transfer_store.rs  history.rs  lib.rs  library.rs  main.rs  mobile.rs  models.rs  network.rs  network_diagnostics.rs  notifications.rs  ocr.rs  security.rs  state.rs  sync.rs  translator.rs  tray.rs  window_position.rs
src/lib/: about.ts  clipboard.ts  clipboardFileDownload.ts  deviceList.ts  deviceToast.ts  fileSizeLimit.ts  fileTransfer.ts  floatingClipboardSelection.ts  format.ts  globalShortcut.ts  historyPreview.ts  libraryLayout.ts  manualConnectDraft.ts  mediaPreviewImagePanZoom.ts  mediaPreviewWindow.ts  qrCode.ts  refreshFeedback.ts  saveFeedback.ts  statusBadge.ts  tauri.ts  toasts.ts  trustPrompt.ts  windowDrag.ts  windowMode.ts  windowTransition.ts
src/pages/: About.vue  Clipboard.vue  Devices.vue  FileTransfer.vue  FloatingClipboardHistory.vue  History.vue  Home.vue  Library.vue  Logs.vue  MediaPreview.vue  MobileQr.vue  Ocr.vue  Settings.vue  Translate.vue
src/router/: index.ts
src/stores/: config.ts  devices.ts  fileTransfer.ts  history.ts  (+7 more)
tests/: __init__.py  aboutPage.test.ts  aboutUpdate.test.ts  appNaming.test.ts  appStartupOverlay.test.ts  autoUpdateStartup.test.ts  clipboard.test.ts  clipboardCategoryMotion.test.ts  clipboardFileDeferredDownload.test.ts  clipboardFileDownloadFeedback.test.ts  clipboardFileDownloadUi.test.ts  clipboardFileSyncEchoSuppression.test.ts  clipboardHistoryDeviceName.test.ts  clipboardImagePreview.test.ts  clipboardLibraryActions.test.ts  clipboardLinkOpen.test.ts  clipboardPage.test.ts  clipboardSenderFileLocation.test.ts  clipboardVideoPreview.test.ts  clipboardVideoThumbnail.test.ts  closeAction.test.ts  desktopNotifications.test.ts  deviceAwaitingTrustCancel.test.ts  deviceConnectedBadgeStyleSwap.test.ts  deviceDisconnectRealtime.test.ts  deviceHistoryList.test.ts  deviceList.test.ts  devicePersistence.test.ts  deviceToast.test.ts  devicesConnectedSection.test.ts  devicesMobileDialog.test.ts  devicesPageCopy.test.ts  disconnectNoticeTheme.test.ts  externalLinks.test.ts  fileTransferPage.test.ts  fileTransferStore.test.ts  floatingClipboardMore.test.ts  floatingClipboardSelection.test.ts  floatingLatency.test.ts  floatingMediaPreviewWindow.test.ts  (+98 more)
(+42 files in other folders)
