[package]
name = "copy-sharer"
version = "2.2.0"
description = "LAN clipboard sharing desktop app"
authors = ["Copy-Sharer"]
edition = "2021"

[lib]
name = "copy_sharer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "copy-sharer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.61.3", features = ["ApplicationModel_DataTransfer", "Foundation", "Foundation_Collections"] }
